# website-backend

./: .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  pyproject.toml
.github/workflows/: pytest.yaml  terraform.yaml
bootstrap/github-actions/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
examples/: README.md
examples/containers/: README.md
examples/containers/website-backend-example-worker/: Dockerfile  README.md  worker.py
examples/payloads/: README.md  inputs_message.valid.json  orchestration_message.add_tasks.valid.json  outputs_message.valid.json  task_message.matching.json
modules/: README.md
modules/container-image/: README.md  main.tf  variables.tf
modules/fargate-compute/: README.md  main.tf  outputs.tf  variables.tf
modules/fargate-compute/lambda/: Dockerfile  lambda_handler.py
modules/lambda-deploy/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
modules/orchestration/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
modules/orchestration/lambda/: Dockerfile  lambda_handler.py
modules/task-queue/: README.md  main.tf  outputs.tf  variables.tf
modules/web-interface/: README.md
scripts/: README.md
src/website_backend/: runtime.py
src/website_backend/compute/: __init__.py  fargate_launcher.py
src/website_backend/messages/: __init__.py  common.py  inputs.py  orchestration.py  outputs.py  task.py
src/website_backend/orchestration/: orchestrator.py  s3_sqlite.py  taskdb.py
src/website_backend/queues/: __init__.py  aws_utils.py  memory.py  protocols.py  sns.py  sqs.py  types.py
src/website_backend/testing/: __init__.py  common.py  exercise_sqs_redrive.py  inspect_taskdb_snapshot.py  invoke_function_url.py  publish_sns_message.py  publish_sqs_message.py  read_json_file.py  read_s3_object.py  read_sqs_messages.py
tests/py/: conftest.py  test_runtime.py
tests/py/compute/: test_example_worker.py  test_fargate_launcher.py
tests/py/messages/: test_inputs.py  test_orchestration.py  test_outputs.py  test_task.py
tests/py/orchestration/: conftest.py  test_orchestrator.py  test_s3_sqlite.py  test_taskdb.py
tests/py/queues/: conftest.py  test_aws_utils.py  test_memory.py  test_sns.py  test_sqs.py
tests/py/testing/: test_common.py  test_exercise_sqs_redrive.py  test_inspect_taskdb_snapshot.py  test_invoke_function_url.py  test_publish_sns_message.py  test_publish_sqs_message.py  test_read_json_file.py  test_read_s3_object.py  test_read_sqs_messages.py
tests/tf/: README.md
tests/tf/ci-smoke/: .terraform.lock.hcl  README.md  main.tf  message.json  smoke.tftest.hcl
tests/tf/fargate-compute/: README.md  main.tf  smoke.tftest.hcl
tests/tf/lambda-deploy/: README.md  main.tf  smoke.tftest.hcl
tests/tf/orchestration/: README.md  main.tf  outputs.tf  smoke.tftest.hcl
tests/tf/support/modules/: README.md
tests/tf/support/modules/exercise-sqs-redrive/: main.tf
tests/tf/support/modules/inspect-taskdb-snapshot/: main.tf
tests/tf/support/modules/publish-sns-message/: main.tf
tests/tf/support/modules/publish-sqs-message/: main.tf
tests/tf/support/modules/read-json-file/: main.tf
tests/tf/support/modules/read-s3-object/: main.tf
tests/tf/support/modules/read-sqs-messages/: main.tf
tests/tf/support/modules/write-json-artifact/: main.tf
tests/tf/support/smoke/: .terraform.lock.hcl  main.tf  smoke.tftest.hcl
tests/tf/task-queue/: README.md  main.tf  smoke.tftest.hcl
