[project]
authors = [{name = "David W.H. Swenson", email = "dwhs@hyperblazer.net"}]
name = "website-backend"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [
    "pydantic>=2,<3",
    "boto3",
    "exorcist @ git+https://github.com/OpenFreeEnergy/exorcist",
]

[project.optional-dependencies]
dev = ["moto", "pre-commit", "pytest", "pytest-cov", "requests", "ruff"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
website_backend = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
opentofu = "1.11.*"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
test-py = "python -m pytest tests/py"
test-py-cov = "python -m pytest --cov=src/website_backend --cov-report=xml:coverage.xml tests/py"
_init-tf-support-smoke = "tofu -chdir=tests/tf/support/smoke init"
_init-tf-ci-smoke = "tofu -chdir=tests/tf/ci-smoke init"
test-tf-support-smoke = { cmd = "tofu -chdir=tests/tf/support/smoke test -test-directory=.", depends-on = ["_init-tf-support-smoke"] }
test-tf-ci-smoke = { cmd = "tofu -chdir=tests/tf/ci-smoke test -test-directory=.", depends-on = ["_init-tf-ci-smoke"] }
